# fridge-chef-app

./: .gitignore  Dockerfile  FridgeChef_AI_Prompts.md  README.md  alembic.ini  docker-compose.yml  dockerHINT.txt  pyproject.toml  test.db  Технічне завдання (ТЗ)_ Проект FridgeChef.docx
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 037aa181b418_initial_tables.py
app/: app.py  config.py  http_client.py
app/db/: database.py  db.py
app/models/: audit.py  product.py  recipe.py  schema.py  shoppingcart.py  user.py
app/routers/: auth.py  fridge.py  recipe.py  shopping.py
app/schemas/: product.py  recipe.py  shopping.py  user.py
app/services/: auth.py  fridge.py  product.py  recipe.py  shopping.py
app/tests/: conftest.py  test_auth.py  test_fridge.py  test_platform.py  test_recipe_and_planning.py  test_shopping_and_notifications.py
