[project]
name = "fridge-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "openai>=2.40.0",
    "passlib[bcrypt]>=1.7.4",
    "pwdlib[bcrypt]>=0.3.0",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.29",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.48.0",
]
